--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,27 @@
     border: 3px solid black;
     font-style: oblique;
     background-color: rgb(255, 245, 108);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .App-header {
-    background-color: #282c34;
     min-height: 100vh;
+    background-color: #282c34;
     display: flex;
     flex-direction: column;
     align-items: top;
     justify-content: top;
     font-size: calc(48px + 2vmin);
     background-color: rgb(255, 255, 255);
+    height: 250px;
 }
 
 .Menu {
-    font-size: 24px;
+    font-size: 14px;
     padding-left: 55px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
