--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
 
 .App-header {
     min-height: 100vh;
-    background-color: #282c34;
     display: flex;
     flex-direction: column;
     align-items: top;
@@ -27,4 +26,18 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border: 3px solid black;
+    position: relative;
+    top: -3px;
+}
+
+.h {
+    font-size: 24px;
+    background-color: #282c34;
+    color: white;
+    font-variant-caps: petite-caps;
+    text-align: center;
+    border: 3px solid black;
+    position: relative;
+    top: 20px;
 }
