--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@
     align-items: top;
     justify-content: top;
     font-size: calc(48px + 2vmin);
-    background-color: rgb(255, 255, 255);
     height: 250px;
 }
 
@@ -40,4 +39,47 @@
     border: 3px solid black;
     position: relative;
     top: 20px;
+}
+
+.trending {
+    width: 33.33%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: top;
+}
+
+.categories {
+    width: 33.33%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: top;
+}
+
+.favs {
+    width: 33.33%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: top;
+}
+
+.trending:hover {
+    background-color: rgb(255, 174, 174);
+}
+
+.categories:hover {
+    background-color: rgb(166, 166, 255);
+}
+
+.favs:hover {
+    background-color: rgb(79, 255, 79);
+    font-size: 25px;
 }
