--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
     justify-content: top;
     font-size: calc(48px + 2vmin);
     height: 250px;
+    background-color: black;
 }
 
 .Menu {
@@ -42,6 +43,10 @@
 }
 
 .trending {
+    background: linear-gradient( to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 4px;
     width: 33.33%;
     height: 100%;
     text-align: center;
@@ -49,9 +54,16 @@
     display: flex;
     flex-direction: column;
     align-items: top;
+    transition: background-size 0.2s;
+    text-decoration: none;
+    background-color: white;
 }
 
 .categories {
+    background: linear-gradient( to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 4px;
     width: 33.33%;
     height: 100%;
     text-align: center;
@@ -59,9 +71,16 @@
     display: flex;
     flex-direction: column;
     align-items: top;
+    transition: background-size 0.2s;
+    text-decoration: none;
+    background-color: white;
 }
 
 .favs {
+    background: linear-gradient( to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 4px;
     width: 33.33%;
     height: 100%;
     text-align: center;
@@ -69,17 +88,22 @@
     display: flex;
     flex-direction: column;
     align-items: top;
+    transition: background-size 0.2s;
+    text-decoration: none;
+    background-color: white;
 }
 
 .trending:hover {
     background-color: rgb(255, 174, 174);
+    background-size: 4px 50px;
 }
 
 .categories:hover {
     background-color: rgb(166, 166, 255);
+    background-size: 4px 50px;
 }
 
 .favs:hover {
     background-color: rgb(79, 255, 79);
-    font-size: 25px;
+    background-size: 4px 50px;
 }
